Fixed a bug that caused the homepage banner to overlap with the text

--- a/css/home.css
+++ b/css/home.css
@@ -212,6 +212,10 @@ a:hover::before {
   opacity: 1;
   z-index: 1;
 }
+.slides img {
+  height: 100%;
+  width: 100%;
+}
 
 .prev,
 .next {
